--- a/crm/website/templates/home.html
+++ b/crm/website/templates/home.html
@@ -46,7 +46,7 @@
         <form method="POST" action="{% url 'home' %}">
             {% csrf_token %}
           <div class="mb-3">
-            <label for="email" class="form-label">Email address</label>
+            <label for="email" class="form-label">Username</label>
             <div class="input-group">
               <span class="input-group-text" id="basic-addon1">@</span>
               <input type="text" class="form-control" name="username" placeholder="Enter your username" required>
